--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -1,8 +1,6 @@
-FEDERATION_SERVER="https://api.stellar.org/federation"
-
-ACCOUNTS=["",
-""
-]
+# SDEX
+VERSION="2.20.0"
+NETWORK_PASSPHRASE="Public Global Stellar Network ; September 2015"
 
 [DOCUMENTATION]
 ORG_NAME=""
@@ -13,18 +11,10 @@ ORG_LOGO=""
 code=""
 issuer=""
 status="live"
+display_decimals=2
+image=""
 name=""
 desc=""
-display_decimals=7
-image=""
-conditions="If you want to follow Initial Public Offering (IPO) of Indonesian stocks via Stellar blockchain, then buy this token to generate profits for your own."
-is_asset_anchored="true"
-anchor_asset_type="stock"
-anchor_asset="4 digits stock or 3-12 digits fiat code"
-redemption_instructions="Wait until IPO running at least 7 working days (please see the schedules). If you see RUPIAH or XLM in BUY positions already standby (inside SDEX), it means you ready to withdraw your stocks become cash. We also guide you the routes to withdraw and convert your tokens become real money."
-
-
-
-
-
-
+conditions=""
+redemption_instructions=""
+fixed_number=1000000
